--- a/browser/components/translations/tests/browser/browser.toml
+++ b/browser/components/translations/tests/browser/browser.toml
@@ -113,6 +113,13 @@ js
 ]
 [
 "
+browser_translations_e2e_full_page_translate
+.
+js
+"
+]
+[
+"
 browser_translations_full_page_move_tab_to_new_window
 .
 js
