--- a/dom/locales/en-US/chrome/accessibility/mac/accessible.properties
+++ b/dom/locales/en-US/chrome/accessibility/mac/accessible.properties
@@ -443,3 +443,58 @@ element
 summary
 =
 summary
+#
+LOCALIZATION
+NOTE
+(
+inputColorValue
+)
+:
+%
+1
+S
+%
+%
+%
+2
+S
+%
+%
+and
+%
+3
+S
+%
+%
+represent
+the
+red
+green
+and
+blue
+color
+values
+as
+a
+percentage
+.
+inputColorValue
+=
+%
+1
+S
+%
+%
+red
+%
+2
+S
+%
+%
+green
+%
+3
+S
+%
+%
+blue
