--- a/dom/locales/en-US/chrome/accessibility/unix/accessible.properties
+++ b/dom/locales/en-US/chrome/accessibility/unix/accessible.properties
@@ -138,3 +138,58 @@ clickAncestor
 =
 Click
 ancestor
+#
+LOCALIZATION
+NOTE
+(
+inputColorValue
+)
+:
+%
+1
+S
+%
+%
+%
+2
+S
+%
+%
+and
+%
+3
+S
+%
+%
+represent
+the
+red
+green
+and
+blue
+color
+values
+as
+a
+percentage
+.
+inputColorValue
+=
+%
+1
+S
+%
+%
+red
+%
+2
+S
+%
+%
+green
+%
+3
+S
+%
+%
+blue
