--- a/dom/locales/en-US/chrome/accessibility/win/accessible.properties
+++ b/dom/locales/en-US/chrome/accessibility/win/accessible.properties
@@ -219,3 +219,58 @@ information
 region
 =
 region
+#
+LOCALIZATION
+NOTE
+(
+inputColorValue
+)
+:
+%
+1
+S
+%
+%
+%
+2
+S
+%
+%
+and
+%
+3
+S
+%
+%
+represent
+the
+red
+green
+and
+blue
+color
+values
+as
+a
+percentage
+.
+inputColorValue
+=
+%
+1
+S
+%
+%
+red
+%
+2
+S
+%
+%
+green
+%
+3
+S
+%
+%
+blue
