--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values/strings.xml
@@ -3196,8 +3196,61 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 No
+internet
+connection
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Looks
+like
+there
+s
+a
+problem
+with
+your
 internet
 connection
 <
@@ -3234,6 +3287,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Check
 your
@@ -3249,6 +3316,95 @@ a
 few
 moments
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Try
+connecting
+on
+a
+different
+device
+.
+Check
+your
+modem
+or
+router
+.
+Disconnect
+and
+reconnect
+to
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Error
+Code
+:
+NS_ERROR_OFFLINE
 <
 /
 string
